updated website url

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -32,8 +32,8 @@
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">+45 52 11 28 90</a></li>
 								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">kristian2890@gmail.com</a></li>
-								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="/">buhlian.dk</a></li>
-								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Copenhagen, Denmark</li>
+								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="/">myinfo.buhlian.dev</a></li>
+								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Denmark</li>
 							</ul>
 						</div><!--//resume-contact-->
 					</div><!--//row-->
@@ -231,7 +231,7 @@
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-3">
 												<div class="resume-degree-org text-muted">My own Django blog and portfolio website</div>
-												<div class="resume-degree-time text-muted"><a href="https://www.buhlian.dk">buhlian.dk</a></div>
+												<div class="resume-degree-time text-muted"><a href="https://www.myinfo.buhlian.dev">myinfo.buhlian.dev</a></div>
 											</li>
 											<!-- <li>
 												<div class="resume-degree-org text-muted">Imperial College London</div>
